<resources>

    <string name="app_name">猿博客</string>

    <!--博客主界面 分栏  -->
    <string name="main_page">首页</string>
    <string name="main_chat">论坛</string>
    <string name="search">搜索</string>
    <string name="code_life">程序人生</string>
    <string name="tuijian_paihang">推荐</string>


    <string name="user">用户</string>
    <string name="account">请输入账户</string>
    <string name="password">密码</string>
    <string name="remenber_password">记住密码</string>
    <string name="input_password">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="mine">我的</string>
    <string name="discovery">发现</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="phone_number_numberfailed">手机号码位数不对</string>
    <string name="phone_number_error">请输入正确的手机号</string>
    <string name="input_phone_password">请输入账号密码</string>
    <string name="phone_has_register">手机号已注册过，请登录！</string>
    <string name="phone_code_failed">验证码获取失败，请重新获取</string>
    <string name="phone_code_error">验证码输入错误</string>
    <string name="code">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="register_success">注册成功</string>
    <string name="register">注册</string>
    <string name="registerAccount">账号</string>
    <string name="input_regisaccount">请输入账号</string>
    <string name="register_password">密码</string>
    <string name="fragment_mine">我的音乐</string>
    <string name="fragment_discovery">发现</string>
    <string name="fragment_video">视频</string>
    <string name="account_information">账户</string>

    <!--recyclerView item内容  -->
    <string name="text_description">浏览器类型判断方法有两种：根据浏览器特性来判断根据来检测具体使用哪种方法要看具体需求的场景场景一：为了让用户有较流畅完整的体验，在站点提示用户使用或者，这种场景对浏览器类型的判断并非特别严格，可以使用检测的方法。（因为很多浏览器厂商会篡改标识）。场景二....</string>
    <string name="test_title">测试标题</string>
    <string name="fabiao">发表:</string>
    <string name="tuijian">推荐:</string>
    <string name="pinglun">评论:</string>
    <string name="liulan">浏览:</string>
    <string name="search_other_blog">搜索其他博客</string>
    <string name="blog_num">博文数：</string>
    <string name="last_update">最后更新：</string>

    <!-- 搜索相关 -->
    <string name="input_search_blog">请输入搜索内容</string>
    <string name="content_searching">内容加载中......</string>

    <!--toolbar  -->
    <string name="toolbar_setting">设置</string>
    <string name="china">中国</string>
    <string name="query_failed">加载失败</string>
    <string name="publish_time">同步中</string>
    <string name="publish_time_failed">同步失败</string>
    <string name="back">再按一次退出</string>
</resources>
