<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="文章名称"
        android:textSize="16sp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/article_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="文章内容"
        android:textSize="14sp"
        android:textColor="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/recommend"
            style="@style/rankreading"
            android:text="@string/tuijian"/>

        <TextView
            android:id="@+id/comment"
            style="@style/rankreading"
            android:text="@string/pinglun"/>

        <TextView
            android:id="@+id/viewer"
            style="@style/rankreading"
            android:text="@string/liulan"/>
    </LinearLayout>

</merge>