<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <!--头像-->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageview_userhead"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/image"
        app:riv_border_color="#ffffff"
        app:riv_border_width="2dip"
        app:riv_corner_radius="30dip"
        app:riv_mutate_background="true"
        app:riv_oval="true"
        app:riv_tile_mode="repeat"/>

    <!-- 信息内容-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:text="@string/test_title"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
            android:text="@string/text_description"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/recyclerview_item_style"
                android:text="@string/blog_num" />

            <TextView
                android:id="@+id/tv_sum"
                style="@style/recyclerview_item_style"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_time"
                style="@style/recyclerview_item_style"
                android:text="@string/last_update"/>

            <TextView
                android:id="@+id/tv_best"
                style="@style/recyclerview_item_style"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imagebutton_more"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="?android:selectableItemBackground"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@mipmap/more"/>
</LinearLayout>