<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:orientation="horizontal">
        <com.vivo.chmusicdemo.utils.RoundImageView
            android:id="@+id/user_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/smssdk_default_avatar"
            app:type="circle"/>
        <LinearLayout
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="作者名字"
                android:textSize="14sp"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/publish_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="发表时间"
                android:textSize="12sp"
                android:textColor="@color/gray"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="文章名称"
        android:textSize="16sp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/article_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="文章内容"
        android:textSize="14sp"
        android:textColor="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/recommend"
            style="@style/rankreading"
            android:text="@string/tuijian"/>

        <TextView
            android:id="@+id/comment"
            style="@style/rankreading"
            android:text="@string/pinglun"/>

        <TextView
            android:id="@+id/viewer"
            style="@style/rankreading"
            android:text="@string/liulan"/>
    </LinearLayout>


</LinearLayout>